--- a/style.css
+++ b/style.css
@@ -6,19 +6,32 @@
 body {
     background-color: black;
     color: yellow;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
 }
 header {
     color: black;
     background-color: yellow;
     text-align: center;
     padding: 10px 10px;
-
+    border-radius: 5px;
 }
 
 article {
     background-color: gray;
     padding: 20px 20px;
-    margin-bottom: 10px;
     border-radius: 5px;
-    
+    width: 700px;
+    height: 650px;
+    margin: 10px 10px;
+    justify-items: center;
+
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
