--- a/style.css
+++ b/style.css
@@ -25,13 +25,14 @@ article {
     padding: 20px 20px;
     border-radius: 5px;
     width: 700px;
-    height: 650px;
+    height: 450px;
     margin: 10px 10px;
     justify-items: center;
-
+    font-size: large;
 }
 
 a {
     color: white;
     text-decoration: none;
+    font-size: 28px;
 }
