--- a/style.css
+++ b/style.css
@@ -1,38 +1,64 @@
 * {
     font-family: monospace;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 
 body {
     background-color: black;
     color: yellow;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    
+}
+
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
 }
 header {
     color: black;
     background-color: yellow;
+    width: 100%;
+    padding: 25px;
+    font-size: 50px;
     text-align: center;
-    padding: 10px 10px;
-    border-radius: 5px;
 }
 
 article {
-    background-color: gray;
-    padding: 20px 20px;
+    background-color:gray;
+    padding: 25px;
     border-radius: 5px;
-    width: 700px;
-    height: 450px;
-    margin: 10px 10px;
-    justify-items: center;
-    font-size: large;
+    margin-bottom: 20px;
+    min-height: 200px;
 }
 
 a {
     color: white;
     text-decoration: none;
     font-size: 28px;
+}
+
+h2 {
+    font-size: 30px;
+    margin-bottom: 10px;
+}
+
+@media (max-width: 500px) {
+    article {
+        padding: 15px;
+        font-size: medium;
+    }
+
+    header {
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 15px;
+    }
+
+    a {
+        font-size: 24px;
+    }
 }
